--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
+    "react-svg": "^8.0.4",
     "react-transition-group": "^2.9.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0"
